# cipher-box

./: LICENSE
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/pkg/: crypto_app_lib.d.ts  crypto_app_lib.js  crypto_app_lib_bg.wasm  crypto_app_lib_bg.wasm.d.ts  package.json
