[package]
name = "cipher-box"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "crypto_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
wasm-bindgen = "0.2.122"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }


# 💻 ۳. وابستگی‌های مخصوص دسکتاپ/موبایل (وقتی برای واسم بیلد می‌گیری کاملاً نادیده گرفته می‌شوند)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-opener = "2"
